Fix whitespace on right side of screen bug

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,7 @@
     outline: 0;
     vertical-align: baseline;
     background: transparent;
+    overflow-x: hidden;
 }
 
 body {
